--- a/app/src/main/res/layout-v21/item_produto.xml
+++ b/app/src/main/res/layout-v21/item_produto.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,9 +10,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="8dp"
-        app:cardCornerRadius="8dp"
-        android:elevation="10dp">
+        android:layout_margin="2dp"
+        android:elevation="10dp"
+        app:cardCornerRadius="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,16 +34,22 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="6dp"
                 android:gravity="center_horizontal"
+                android:maxLines="1"
                 android:text="Nome Produto"
                 android:textAllCaps="true"
-                android:textSize="12sp" />
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/valor_produto"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Valor Produto"
+                android:textSize="14dp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
-
-
 
 
 </LinearLayout>
