--- a/app/src/main/res/layout-v21/item_produto.xml
+++ b/app/src/main/res/layout-v21/item_produto.xml
@@ -35,7 +35,7 @@
                 android:layout_marginTop="6dp"
                 android:gravity="center_horizontal"
                 android:maxLines="1"
-                android:text="Nome Produto"
+                android:text="@string/nome_produto"
                 android:textAllCaps="true"
                 android:textSize="14sp" />
 
@@ -43,7 +43,7 @@
                 android:id="@+id/valor_produto"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Valor Produto"
+                android:text="@string/valor_produto"
                 android:textSize="14dp"
                 android:textStyle="bold" />
 
